Add inference runner for UniAD
Add dockerfile

Initial runner for UniAD

Squash all incoming changes

Clean up API interface

Update with new interface

Update with new future trajs interface

Update runner with new api interface

Update config file

Add new README

Update README

Update README

Revert back to original model code (remove formatting)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# MacOS
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -150,3 +153,6 @@ debug/
 *projs/
 
 core.*
+
+output/
+outputs/
